# dclprocessor_demo

./: README.md
dclcomponents/: CMakeLists.txt  README.md
dclcomponents/config/: collector_tcp1.json  pipeline_demo.json  system_simple_tcp.json
dclcomponents/examples_c/: first_block.c  middle_block.c  server_block.c
dclcomponents/examples_cpp/: pgmiddle.cpp
dclcomponents/pipelinedemo/: CMakeLists.txt
dclcomponents/pipelinedemo/src/: capturer.c  filter.c
dclprocessor/: CMakeLists.txt  README.md
dclprocessor/DCLProcessor/: CMakeLists.txt  DCLProcessor.pc.in
dclprocessor/DCLProcessor/examples/: MiddleBlock.cpp  MiddleBlock.hpp
dclprocessor/DCLProcessor/include/DCLProcessor/: DCLProcessor.hpp
dclprocessor/DCLProcessor/src/: DCLProcessor.cpp
dclprocessor/collector/: CMakeLists.txt  dclcollector.pc.in
dclprocessor/collector/examples/: simple_collector.c  simple_collector_json.c
dclprocessor/collector/include/collector/: collector.h  source.h
dclprocessor/collector/src/: collector.c  source.c
dclprocessor/collector/tests/: DCLCollectorTests.cpp
dclprocessor/description/: CMakeLists.txt  dcldescription.pc.in
dclprocessor/description/examples/: CMakeLists.txt  pipeline_big_json.c  rw_pl_descriptor.c  system_json.c  system_test.json
dclprocessor/description/include/description/: collector_description.h  dclprocessor_description.h  description_json.h  pipeline_description.h  pipeline_module_description.h  source_description.h
dclprocessor/description/src/: collector_description.c  dclprocessor_description.c  description_json.c  pipeline_description.c  pipeline_module_description.c  source_description.c
dclprocessor/description/tests/: DCLDescriptionTests.cpp  collector_description.cpp  source_description.cpp
dclprocessor/pipeline/: CMakeLists.txt  README.md  dclpipeline.pc.in
dclprocessor/pipeline/examples/: CMakeLists.txt  phandler.c  pipeline_examples.c  pipeline_examples.h  pserver.c  pserver_old.c  psource.c
dclprocessor/pipeline/include/pipeline/: pipeline.h  pipeline_client.h  pipeline_module.h  pipeline_server.h
dclprocessor/pipeline/src/: pipeline.c  pipeline_client.c  pipeline_module.c  pipeline_server.c
dclprocessor/pipeline/tests/: DCLPipelineTests.cpp  pipeline.cpp
dclprocessor/process/: CMakeLists.txt  README.md  dclproc.pc.in
dclprocessor/process/examples/: CMakeLists.txt
dclprocessor/process/include/process/: process_mngr.h  signal_reaction.h
dclprocessor/process/src/: process_mngr.c  signal_reaction.c
dclprocessor/process/tests/: DCLProcessTests.cpp  signal_reaction.cpp
dclprocessor/processor/: CMakeLists.txt  dclprocessor.pc.in
dclprocessor/processor/examples/: flags.c  last_block.c  middle_block.c
dclprocessor/processor/include/processor/: dclprocessor.h
dclprocessor/processor/src/: dclprocessor.c
dclprocessor/processor/tests/: DCLProcessorTests.cpp
dclprocessor/shmem/: CMakeLists.txt  README.md  dclshmem.pc.in
dclprocessor/shmem/include/shmem/: memory_map.h  shared_memory.h
dclprocessor/shmem/src/: shared_memory.c
dclprocessor/shmem/tests/: DCLShmemTests.cpp  memory_map.cpp  shared_memory.cpp
dclprocessor/shmem/tools/: env_manipulations.cpp  env_manipulations.h
dclprocessor/tcp/: CMakeLists.txt  README.md  dclmessenger.pc.in
dclprocessor/tcp/examples/: CMakeLists.txt  README.md  client.c  proxy.c  server.c
dclprocessor/tcp/include/messenger/: messenger.h
dclprocessor/tcp/include/tcp/: client.h  connection.h  messenger.h  proxy.h  server.h
dclprocessor/tcp/src/: client.c  connection.c  messenger.c  proxy.c  server.c
libcapture/: CMakeLists.txt
libcapture/FakeTCP/: CMakeLists.txt  README.md  tcpcapture.pc.in
libcapture/FakeTCP/include/tcpcapture/: cvcamera.h  cvcollector.h
libcapture/FakeTCP/src/: cvcollector.cpp  cvgenerator.cpp
libcapture/FakeTCP/tools/: tcpcamera.cpp
libcapture/GigE/: CMakeLists.txt  README.md  udpcapture.pc.in
libcapture/GigE/include/udpcapture/: device.h  gige_camera.h  gige_camera_ops.h  gvcp.h  gvsp.h  iframe.h  interface.h
libcapture/GigE/src/: device.c  gige_camera.c  gige_camera_ops.c  gvcp.c  interface.c
libcapture/GigE/tools/: udpfinder.c  udptest.c
